--- a/TranspoLink/Views/Account/Register.cshtml
+++ b/TranspoLink/Views/Account/Register.cshtml
@@ -105,11 +105,26 @@
                                 @* --- PASSWORD REQUIREMENT POPUP --- *@
                                 <div id="passwordPopup" class="password-requirements-popup">
                                     <p>Password must contain:</p>
-                                    <div class="req-item invalid" id="req-letter"><span class="req-icon">✖</span> At least one letter</div>
-                                    <div class="req-item invalid" id="req-capital"><span class="req-icon">✖</span> At least one capital letter</div>
-                                    <div class="req-item invalid" id="req-number"><span class="req-icon">✖</span> At least one number</div>
-                                    <div class="req-item invalid" id="req-symbol"><span class="req-icon">✖</span> At least one symbol</div>
-                                    <div class="req-item invalid" id="req-length"><span class="req-icon">✖</span> Be at least 8 characters</div>
+
+                                    <div class="req-item invalid req-letter" id="req-letter">
+                                        <span class="req-icon">✖</span> At least one letter
+                                    </div>
+
+                                    <div class="req-item invalid req-capital" id="req-capital">
+                                        <span class="req-icon">✖</span> At least one capital letter
+                                    </div>
+
+                                    <div class="req-item invalid req-number" id="req-number">
+                                        <span class="req-icon">✖</span> At least one number
+                                    </div>
+
+                                    <div class="req-item invalid req-symbol" id="req-symbol">
+                                        <span class="req-icon">✖</span> At least one symbol
+                                    </div>
+
+                                    <div class="req-item invalid req-length" id="req-length">
+                                        <span class="req-icon">✖</span> Be at least 8 characters
+                                    </div>
                                 </div>
                                 @* ---------------------------------- *@
 
